[package]
name = "tokio-cron"
version = "0.1.2"
edition = "2021"
description = "A simple cron scheduler for tokio"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
cron = "0.12.0"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
